--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-web": "~0.18.9"
   },
   "devDependencies": {
